test/log/permutation/vmerge_vv_i16_m.txt
vmerge_vv_i16_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vmerge_vv_i16_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vmerge_vv_i16_m.c:30:6: warning: no previous prototype for 'vmerge_vv_i16_m_golden' [-Wmissing-prototypes]
   30 | void vmerge_vv_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *b,int16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vmerge_vv_i16_m.c: In function 'vmerge_vv_i16_m_golden':
vmerge_vv_i16_m.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vmerge_vv_i16_m.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vmerge_vv_i16_m.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vmerge_vv_i16_m.c: In function 'main':
vmerge_vv_i16_m.c:37:14: warning: declaration of 'mask' shadows a parameter [-Wshadow]
   37 |     bool32_t mask;
      |              ^~~~
vmerge_vv_i16_m.c:30:39: note: shadowed declaration is here
   30 | void vmerge_vv_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *b,int16_t *exp_result) {
      |                             ~~~~~~~~~~^~~~
vmerge_vv_i16_m.c:38:16: warning: declaration of 'maskoff' shadows a parameter [-Wshadow]
   38 |     int16x32_t maskoff;
      |                ^~~~~~~
vmerge_vv_i16_m.c:30:53: note: shadowed declaration is here
   30 | void vmerge_vv_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *b,int16_t *exp_result) {
      |                                            ~~~~~~~~~^~~~~~~
vmerge_vv_i16_m.c:39:16: warning: declaration of 'a' shadows a parameter [-Wshadow]
   39 |     int16x32_t a;
      |                ^
vmerge_vv_i16_m.c:30:70: note: shadowed declaration is here
   30 | void vmerge_vv_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *b,int16_t *exp_result) {
      |                                                             ~~~~~~~~~^
vmerge_vv_i16_m.c:40:16: warning: declaration of 'b' shadows a parameter [-Wshadow]
   40 |     int16x32_t b;
      |                ^
vmerge_vv_i16_m.c:30:81: note: shadowed declaration is here
   30 | void vmerge_vv_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *b,int16_t *exp_result) {
      |                                                                        ~~~~~~~~~^
vmerge_vv_i16_m.c:47:13: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   47 |     int16_t exp_result[32] = {0};
      |             ^~~~~~~~~~
vmerge_vv_i16_m.c:30:92: note: shadowed declaration is here
   30 | void vmerge_vv_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *b,int16_t *exp_result) {
      |                                                                                   ~~~~~~~~~^~~~~~~~~~
vmerge_vv_i16_m.c:49:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   49 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vmerge_vv_i16_m.c:58:5: note: use '-flax-vector-conversions' to permit conversions between vectors with differing element types or numbers of subparts
   58 |     result = vmerge_vv_i16_m(mask,maskoff,a,b);
      |     ^~~~~~
vmerge_vv_i16_m.c:58:45: error: incompatible type for argument 4 of 'vmerge_vv_i16_m'
   58 |     result = vmerge_vv_i16_m(mask,maskoff,a,b);
      |                                             ^
      |                                             |
      |                                             int16x32_t
In file included from vmerge_vv_i16_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2236:1: note: expected 'uint16x32_t' but argument is of type 'int16x32_t'
 2236 | __RUGRATS_MERGE_VV_OP (merge, i, int, uint, 16, 16, 32)
      | ^~~~~~~~~~~~~~~~~~~~~
vmerge_vv_i16_m.c: In function 'vmerge_vv_i16_m_golden':
vmerge_vv_i16_m.c:78:1: error: expected declaration or statement at end of input
   78 | }
      | ^
vmerge_vv_i16_m.c:30:39: warning: unused parameter 'mask' [-Wunused-parameter]
   30 | void vmerge_vv_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *b,int16_t *exp_result) {
      |                             ~~~~~~~~~~^~~~
vmerge_vv_i16_m.c:30:53: warning: unused parameter 'maskoff' [-Wunused-parameter]
   30 | void vmerge_vv_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *b,int16_t *exp_result) {
      |                                            ~~~~~~~~~^~~~~~~
vmerge_vv_i16_m.c:30:70: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vmerge_vv_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *b,int16_t *exp_result) {
      |                                                             ~~~~~~~~~^
vmerge_vv_i16_m.c:30:81: warning: unused parameter 'b' [-Wunused-parameter]
   30 | void vmerge_vv_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *b,int16_t *exp_result) {
      |                                                                        ~~~~~~~~~^
vmerge_vv_i16_m.c:30:92: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vmerge_vv_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,int16_t *b,int16_t *exp_result) {
      |                                                                                   ~~~~~~~~~^~~~~~~~~~
At top level:
vmerge_vv_i16_m.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vmerge_vv_i16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vmerge_vv_i16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vmerge_vv_i16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vmerge_vv_i16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed